--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 #wpbut{position:relative; top:5px;background:none; width:20px;height: 20px;border: none;}
 			  </style>
 	<title>ReSearch</title>
-	<link rel="icon" type="image/png" href="/favicon.png">
-	<link rel="manifest" href="/manifest.webmanifest">
+	<link rel="icon" type="image/png" href="./favicon.png">
+	<link rel="manifest" href="./manifest.webmanifest">
 </head>
 <body>
 	<Center>
